--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Simples consulta a cotação de moédas">
+  <meta name="description" content="Simples consulta a cotação de moedas">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
